welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:15: error: not found: value abs
    for (compt1<-1 to abs-1){
                      ^ColumnByColumn:16: error: not found: value ord
      for (compt2<-1 to ord-1){
                        ^